# serval-charton

./: .gitignore  BUILD_WINDOWS.md  Cargo.toml  README.md
data/: tags_mazev11_xmp-s-m_20260312103320.csv
output/altair_demo/specs/: hour_heatmap.json  overview_day.json  overview_month.json  overview_week.json
output/altair_demo/specs/details/: 6009_gps1_diq202504_202509.json  6009_gps2_diq202504_202509.json  601202_diq202504_202509.json  601702_diq202504_202509.json  6020_old_diq202504_202509.json  6031_gps1_diq202504_202509.json  6031_gps2_diq202504_202509.json  6031_gps3_diq202504_202509.json  603602_gps1_diq202504_202509.json  603602_gps2_diq202504_202509.json  6043_gps1_diq202504_202509.json  6043_gps2_diq202504_202509.json  6043_gps3_diq202504_202509.json  6047_gps1_diq202504_202509.json  6047_gps2_diq202504_202509.json  6047_gps3_diq202504_202509.json  6051_diq202504_202509.json  6051_gps2_diq202504_202509.json  6053_diq202504_202509.json  6056_diq202504_202509.json  6057_diq202504_202509.json  6058_diq202504_202509.json  6069_gps1_diq202504_202509.json  6069_gps2_diq202504_202509.json  6071_diq202504_202509.json  6076_diq202504_202509.json  6080_diq202504_202509.json  6084_diq202504_202509.json  6085_diq202504_202509.json  6086_diq202504_202509.json  6087_diq202504_202509.json  6088_diq202504_202509.json  6089_gps1_diq202504_202509.json  6089_gps2_diq202504_202509.json  6089_old_gps1_diq202504_202509.json  6089_old_gps2_diq202504_202509.json  6089_old_gps3_diq202504_202509.json  6091_gps1_diq202504_202509.json  6091_gps2_diq202504_202509.json  6100_diq202504_202509.json  (+4 more)
output/report/: timestamp_report.html
output/static/: manifest.txt
src/: data.rs  main.rs  render.rs  report.rs  util.rs  web_app.rs
web/: Cargo.toml  demo.csv  index.html  trap_info_export.js
web/src/: lib.rs
