[package]
name = "datetime_plot_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
charton = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
polars = { version = "0.49", default-features = false, features = ["dtype-date", "dtype-datetime", "fmt", "lazy", "strings", "temporal"] }
polars-io = { version = "0.49", default-features = false, features = ["csv"] }

[profile.release]
strip = "symbols"
