[package]
name = "datetime_plot_demo_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
charton = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
console_error_panic_hook = "0.1"
csv = "1.3"
polars = { version = "0.49", default-features = false, features = ["dtype-categorical", "dtype-date", "dtype-datetime", "strings", "temporal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
